--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>潜游时光 DivingTime - 让你的旅游有温度</title>
+    <script>
+      if(!window.Promise) {
+        document.writeln('<script src="https://cdn.bootcss.com/es6-promise/4.1.1/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
+      }
+      if(!window.fetch) {
+        document.writeln('<script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"'+'>'+'<'+'/'+'script>');
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
